2013-02-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c,
	  src/stm8/main.c:
	  Various code generation fixes, improvements, debug messages.
	* device/lib/stm8/Makefile.in:
	  Fix some hc08 leftovers.

2013-02-08 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: bugfix

2013-02-03 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Improved recognition of jump tables.

2013-02-03 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Improved recognition of jump tables and
	  bugfix.

2013-02-03 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Bugfix and count of references in the RAM.

2013-02-01 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Small refinements.

2013-01-31 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Use IRAM key in name-list file.

2013-01-29 Philipp Klaus Krause <philipp AT colecovision.eu>

	* src/stm8/gen.c:
	  Use clr for more efficient zeroing.

2013-01-29 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Use informations of the OSEG area from map file.

2013-01-28 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: New command option: --name-list

2013-01-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/gen.c,
	  More efficient calls to _Noreturn functions.

2013-01-28 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Improved finds of stack. Prints into
	  map the iRAM.

2013-01-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c,
	  src/z80/gen.c,
	  More efficient calls to _Noreturn functions.

2013-01-27 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/mcs51-disasm.pl: Prints the map of RAM, list of bits and
	  start of stack.

2013-01-27 Molnar Karoly <molnarkaroly AT users.sf.net>
